@@ -1,3 +1,8 @@
+Sun Aug 30 01:15:31 2009  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* ext/zlib/zlib.c (gzfile_read_all): use gzfile_newstr;
+	  set and convert its encoding. [ruby-dev:38304]
+
 Sat Aug 29 20:40:02 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>
 
 	* vm_eval.c (rb_call0): gets rid of checking method cache twice.
